--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -1,3 +1,6 @@
+$main-font: 'Quicksand', sans-serif;
+$queue-border: rgb(255, 162, 57);
+
 body {
   #root {
     .App {
@@ -6,13 +9,36 @@ body {
           display: flex;
           flex-direction: row;
           width: 100%;
+          height: 100vh;
 
           .column {
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 33%;
-            border: 1px solid black; 
+            width: 33.33%;
+            background-color: #fff;
+
+            .status {
+              font-family: $main-font;
+              text-transform: uppercase;
+              font-weight: 500;
+              font-size: 0.7em;
+              margin: 1.5em;
+              color: #444444;
+            }
+          }
+
+          .column:nth-child(1) {
+            border: 0.2px solid #999;
+          }
+
+          .column:nth-child(2) {
+            border-top: 0.2px solid #999; 
+            border-bottom: 0.2px solid #999; 
+          }
+
+          .column:nth-child(3) {
+            border: 0.2px solid #999; 
           }
         }
       }
