--- a/src/containers/EditCard/EditCard.scss
+++ b/src/containers/EditCard/EditCard.scss
@@ -14,7 +14,7 @@ body {
 
       .ReactModal__Content {
 
-        .add-form {
+        .edit-form {
           display: flex;
           flex-direction: column;
           justify-content: space-between;
