--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,11 +15,19 @@ body {
           padding: 0em 1em;
           height: 2.5em;
 
-          .header-title {
-            margin: 0;
-            font-weight: 400;
-            font-size: 1.2em;
-            color: #fff;
+          .kanban-tools {
+            display: flex;
+            height: 100%;
+            width: 100%;
+            justify-content: flex-start;
+            align-items: center;
+
+            .header-title {
+              margin-right: 1em;
+              font-weight: 400;
+              font-size: 1.2em;
+              color: #fff;
+            }
           }
         }
       }
