--- a/src/containers/AddCardButton/AddCardButton.scss
+++ b/src/containers/AddCardButton/AddCardButton.scss
@@ -11,7 +11,7 @@ body {
             justify-content: center;
             align-items: center;
             height: 60%;
-            width: 10%;
+            width: 100px;
             background-color: $header-color;
             color: #fff;
             border: 1px solid #fff;
