--- a/src/containers/Card/Card.scss
+++ b/src/containers/Card/Card.scss
@@ -26,6 +26,7 @@ body {
               margin-bottom: 0.5em;
               font-family: $body-font;
               color: $header-color;
+              box-shadow: 3px 3px 2px 2px rgba(0, 0, 0, 0.2);
 
               .card-top {
                 display: flex;
